Added the ability to create a secretless client.
